syntax = "proto3";

package user;

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (UserResponse);
  rpc LoginUser (LoginUserRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  string lastName = 4;
  string role = 5;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message User {
  string id = 1;
  string email = 2;
  string name = 4;
  string lastName = 5;
  string role = 6;
  string status = 7;
}

message UserResponse {
  User user = 1;
  string message = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  optional User user = 2;
  optional string message = 3;
}